--- a/bananaTechies/BananaTechiesV3/.classpath
+++ b/bananaTechies/BananaTechiesV3/.classpath
@@ -6,6 +6,11 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry excluding="**" kind="src" output="target/classes" path="src/main/resources">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
 		<attributes>
 			<attribute name="optional" value="true"/>
@@ -20,10 +25,7 @@
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
-<<<<<<< HEAD
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-=======
->>>>>>> branch 'master' of https://github.com/BananaTechGirls/BananaTechies.git
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
