--- a/bananaTechies/BananaTechiesV3/pom.xml
+++ b/bananaTechies/BananaTechiesV3/pom.xml
@@ -28,6 +28,18 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-server</artifactId>
+			<version>1.8</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-json</artifactId>
+			<version>1.8</version>
+		</dependency>
+		
 
 		<dependency>
 			<groupId>mysql</groupId>
