--- a/bananaTechies/BananaTechiesV3/src/main/webapp/WEB-INF/web.xml
+++ b/bananaTechies/BananaTechiesV3/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,8 @@
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
-		 http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-	version="3.1">
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app id="WebApp_ID" version="3.1"
+	xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee 
+http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
 	<display-name>BananaTechies</display-name>
 	<servlet>
 		<description>
@@ -25,7 +26,7 @@
 		<servlet-name>ListaTareaServlet</servlet-name>
 		<url-pattern>/ListaTareaServlet</url-pattern>
 	</servlet-mapping>
-	
+
 	<!-- jersey -->
 	<display-name>Jersey REST Web Application</display-name>
 
@@ -47,5 +48,4 @@
 		<servlet-name>jersey-servlet</servlet-name>
 		<url-pattern>/v4/*</url-pattern>
 	</servlet-mapping>
-	
 </web-app>
