--- a/bananaTechies/BananaTechiesV3/pom.xml
+++ b/bananaTechies/BananaTechiesV3/pom.xml
@@ -53,6 +53,7 @@
 		<finalName>BananaTechies</finalName>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<source>1.8</source>
